--- a/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.css
+++ b/app/src/app/feature/staff/page/staff-overview-page/staff-overview-page.component.css
@@ -1,3 +1,11 @@
-th{
-  @apply capitalize
+.table-cell {
+  @apply text-left py-2 px-4;
+}
+
+.table-style {
+  @apply min-w-full;
+}
+
+.table-actions {
+  @apply py-2 px-4 flex gap-2;
 }
