--- a/app/src/app/root/component/app.component.html
+++ b/app/src/app/root/component/app.component.html
@@ -1,4 +1,4 @@
-<div class="text-right absolute bottom-5 left-5 text-cyan-50 z-50">
+<div class="text-right absolute top-4 left-20 md:left-5 md:top-4/5 text-blue-950 md:text-cyan-50 z-50">
   <span (click)="changeLanguage('en')" class="cursor-pointer">en</span>
   <span class="px-2">|</span>
   <span (click)="changeLanguage('fr')" class="cursor-pointer">fr</span>
